@@ -6,8 +6,8 @@
     <parent>
         <groupId>io.micrometer</groupId>
         <artifactId>micrometer-tracing-parent</artifactId>
-        <version>1.0.7-SNAPSHOT</version>
-        <relativePath>../..</relativePath>
+        <version>1.0.9-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
     <artifactId>benchmarks</artifactId>
     <packaging>jar</packaging>
@@ -57,15 +57,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
